--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,8 @@ svg {
 
 /* Root Variables */
 :root {
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: E5E7EB;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
