--- a/src/components/banner/Banner.module.css
+++ b/src/components/banner/Banner.module.css
@@ -38,7 +38,8 @@ p {
   }
 
   svg {
-    fill: #60a5fa;
+    stroke: #60a5fa;
+    fill: none;
   }
 }
 
@@ -54,7 +55,8 @@ p {
   }
 
   svg {
-    fill: #10b981;
+    stroke: #10b981;
+    fill: none;
   }
 }
 
@@ -70,7 +72,8 @@ p {
   }
 
   svg {
-    fill: #f59e0b;
+    stroke: #f59e0b;
+    fill: none;
   }
 }
 
@@ -86,6 +89,7 @@ p {
   }
 
   svg {
-    fill: #ef4444;
+    stroke: #ef4444;
+    fill: none;
   }
 }
