--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,9 @@ html {
 
 body {
   margin: 0;
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, sans-serif;
+  line-height: 1.6;
   font-weight: 400;
 }
 
@@ -65,8 +66,8 @@ svg {
 
 /* Root Variables */
 :root {
-  color: black;
-  background-color: E5E7EB;
+  color: #212529;
+  background-color: #f8f9fa;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
